--- a/大三上/传感器技术/传感器提纲.md
+++ b/大三上/传感器技术/传感器提纲.md
@@ -1,5 +1,54 @@
 # 传感器技术
 
+- [传感器技术](#传感器技术)
+  - [题型](#题型)
+  - [绪论](#绪论)
+    - [基本概念](#基本概念)
+      - [物理基本定律和法则](#物理基本定律和法则)
+    - [传感器的组成分类](#传感器的组成分类)
+    - [对传感器的要求](#对传感器的要求)
+      - [传感器的选用原则](#传感器的选用原则)
+    - [地位作用](#地位作用)
+    - [发展趋势](#发展趋势)
+  - [1传感器技术基础](#1传感器技术基础)
+    - [1.1数学模型](#11数学模型)
+    - [1.2传感器的特性与指标](#12传感器的特性与指标)
+      - [静态特性](#静态特性)
+        - [不同的拟合直线的方法](#不同的拟合直线的方法)
+          - [最小二乘法](#最小二乘法)
+      - [动态特性](#动态特性)
+      - [互换性](#互换性)
+    - [1.3 改善传感器性能的技术途径](#13-改善传感器性能的技术途径)
+    - [1.4 合理选择传感器的基本原则和方法](#14-合理选择传感器的基本原则和方法)
+    - [1.5 传感器的标定与校准](#15-传感器的标定与校准)
+  - [</details>](#details)
+  - [2电阻式传感器](#2电阻式传感器)
+    - [应变电阻效应](#应变电阻效应)
+    - [电阻应变计](#电阻应变计)
+      - [温度效应](#温度效应)
+      - [测量电桥：应变电桥](#测量电桥应变电桥)
+      - [电阻应变计式传感器](#电阻应变计式传感器)
+    - [压阻式传感器](#压阻式传感器)
+  - [3变磁阻式传感器Variable Reluctive Transducer](#3变磁阻式传感器variable-reluctive-transducer)
+    - [自感式传感器](#自感式传感器)
+    - [互感式传感器（差动变压器）](#互感式传感器差动变压器)
+    - [电涡流式传感器](#电涡流式传感器)
+  - [4电容式传感器Capacitance Transducer](#4电容式传感器capacitance-transducer)
+  - [5磁电式传感器Magnetoelectric Transducer](#5磁电式传感器magnetoelectric-transducer)
+    - [5.5霍尔传感器（Hall Sensor磁敏传感器）](#55霍尔传感器hall-sensor磁敏传感器)
+  - [6压电式传感器Piezoelectic Sensor](#6压电式传感器piezoelectic-sensor)
+    - [压电效应](#压电效应)
+    - [等效电路及测量电路](#等效电路及测量电路)
+  - [7热电式传感器Thermoelectric Sensor](#7热电式传感器thermoelectric-sensor)
+    - [热电效应](#热电效应)
+      - [热电效应的工作定律：](#热电效应的工作定律)
+      - [热电偶传感器](#热电偶传感器)
+  - [8光电式传感器Photoelectric Sensor](#8光电式传感器photoelectric-sensor)
+    - [应用](#应用)
+  - [10数字式传感器](#10数字式传感器)
+  - [13传感检测技术](#13传感检测技术)
+  - [14传感器新技术](#14传感器新技术)
+
 ## 题型
 
 - 填空
@@ -9,45 +58,64 @@
 
 ## 绪论
 
-1. 基本概念
-   1. 国标：能**感受**规定的被测量（物理化学生物量）并按照一定的规律**转换**成可用信号的器件或装置。通常由直接响应于被测量的**敏感元件**Sensing Element和产生可用信号输出的**转换元件**Transduction Element，以及相应的**信号调节转换电路**
-组成。
-   2. 广义：凡是利用一定的物质（物理化学生物）法则、定理、定律、效应等进行**能量转换或信息转换**，并严格**一一对应**的器件或装置均可称为传感器
-   3. 物理基本定律和法则
-      1. 守恒定律
-      2. 场的定律
-         1. 静电场定律——电容式传感器
-         2. 电磁感应定律——自感、互感、电涡流式传感器
-         3. 运动定律和电磁感应定律——磁电式传感器
-         4. NOTE: 利用场的定律构成的传感器，其形状、尺寸（结构）决定了传感器的量程、灵敏度等主要性能，故此类传感器可统称为“结构型传感器”
-      3. 物质定律
-         1. 半导体物质法则——压阻、热阻、磁阻、光阻、湿阻传感器
-         2. 压电效应（压电晶体物质法则）——压电、声表面波、超声传感器
-         3. NOTE：这类传感器统称为“物性传感器”
-      4. 统计法制
-1. 组成分类
-   - 基本
-      1. 自源型（无源型）:无需外电源
-      2. 辅助电源型：“能量转换型”结构，不需要变换（测量）电路即可有较大的电量输出
-      3. 外源型：“能量控制（调制）型”。“变换（测量）电路”，“信号调理与转换电路”
-   - 消除环境变化的干扰而被广泛采用的的线路补偿法构成型式
-     1. 相同敏感元件的**补偿**型
-     2. **差动**结构补偿型
-     3. 不同敏感元件的**补偿**型
-     4. **反馈**型
-2. 要求
-   1. 足够的容量
-   2. 灵敏度高，精度适当
-   3. 响应速度快，工作稳定、可靠性好
-   4. 适用性和适应性强
-   5. 使用经济
+### 基本概念
 
-3. 地位作用
-4. 发展趋势
-   1. 发现新效应，开发新材料，新功能
-   2. 传感器的多功能集成化和微型化
-   3. 数字化、智能化和网络化
-   4. 研究生物感官，开发仿生传感器
+1. 国标：能**感受**规定的被测量（物理化学生物量）并按照一定的规律**转换**成可用信号的器件或装置。
+   1. 通常由直接响应于被测量的**敏感元件**Sensing Element和
+   2. 产生可用信号输出的**转换元件**Transduction Element，
+   3. （以及相应的**信号调节转换电路**，书上没有，ppt上说是**转换电路**Transduction circuit）组成。
+2. 广义：凡是利用一定的物质（物理化学生物）法则、定理、定律、效应等进行**能量转换或信息转换**，并严格**一一对应**的器件或装置均可称为传感器
+
+#### 物理基本定律和法则
+
+1. 守恒定律
+2. 场的定律
+   1. 静电场定律——电容式传感器
+   2. 电磁感应定律——自感、互感、电涡流式传感器
+   3. 运动定律和电磁感应定律——磁电式传感器
+   4. NOTE: 利用场的定律构成的传感器，其形状、尺寸（结构）决定了传感器的量程、灵敏度等主要性能，故此类传感器可统称为“结构型传感器”
+3. 物质定律
+   1. 半导体物质法则——压阻、热阻、磁阻、光阻、湿阻传感器
+   2. 压电效应（压电晶体物质法则）——压电、声表面波、超声传感器
+   3. NOTE：这类传感器统称为“物性传感器”
+4. 统计法制
+
+### 传感器的组成分类
+
+- 基本
+   1. 自源型（无源型）:无需外电源
+   2. 辅助电源型：“能量转换型”结构，不需要变换（测量）电路即可有较大的电量输出
+   3. 外源型：“能量控制（调制）型”。“变换（测量）电路”，“信号调理与转换电路”
+- 消除环境变化的干扰而被广泛采用的的线路补偿法构成型式
+  1. 相同敏感元件的**补偿**型
+  2. **差动**结构补偿型
+  3. 不同敏感元件的**补偿**型
+  4. **反馈**型
+
+### 对传感器的要求
+
+1. 足够的容量
+2. 灵敏度高，精度适当
+3. 响应速度快，工作稳定、可靠性好
+4. 适用性和适应性强
+5. 使用经济
+
+#### 传感器的选用原则
+<!-- ppt -->
+1. 与测量条件有关的因素
+1. 与传感器有关的技术指标
+1. 与使用环境条件有关的因素
+1. 与购买和维修有关的因素
+
+### 地位作用
+
+### 发展趋势
+
+0. 不断提高和改善**现有传感器**的性能；
+1. 发现**新**效应，开发新材料，新功能
+2. 传感器的**多功能**集成化和微型化
+3. **数字化、智能化和网络化**
+4. 研究生物感官，开发**仿生**传感器
 
 ## 1传感器技术基础
 
@@ -55,55 +123,43 @@
 
 - 静态模型：在静态条件下（即输入量对时间t的各阶导数为零）得到的传感器数学模型（若不考虑滞后和蠕变，可用一代数方程表示）
 - 动态模型
- - 微分方程（常用线性常系数微分方程）
- - 传递函数
+  - 微分方程（常用线性常系数微分方程）
+  - 传递函数
 
 ### 1.2传感器的特性与指标
 
-- 静态特性：
-  1. **线性度**：线性度又称非线性，是表征传感器输出——输入校准曲线与所选定的拟合直线（作为工作直线）之间的**吻合（或偏离）程度**的指标
-     - 通常用相对误差表示$e_L=\pm \frac{\Delta L_{max}}{y_{F.S}}$
-     - 不同的拟合直线的方法
-       1. 理论直线法
-       2. 端点直线法
-       3. [最佳直线](https://wenku.baidu.com/view/f6c7918f0029bd64783e2c46.html)法：保证传感器校准曲线对它的正、负偏差相等并且最小
-       4. 最小二乘法 
-  2. **回差（滞后）**:反应传感器在正（输入量增加）反（输入量减小）行程过程中输入——输出曲线的**不重合程度**的指标
-     1. 通常使用最大差程表示:$e_H=\frac{\Delta H_{max}}{y_{F.S.}}$
-  3. **重复性**
-  4.  
-  5. 分辨力Resolution
-  6. 阈值Threhold
-  7. 稳定性stability
-  8. 漂移Drifting
-  9. 静态误差（精度）Accuracy
- - 动态特性
-   - 动态灵敏度
-   - 频率响应
-   - 固有频率等
- - 互换性
+#### 静态特性
 
-### 1.3 改善传感器性能的技术途径
+1. **线性度**Linearity：
+   - 线性度又称非线性，是表征传感器输出——输入校准曲线与所选定的拟合直线（作为工作直线）之间的**吻合（或偏离）程度**的指标
+   - 通常用相对误差表示$e_L=\pm \frac{\Delta L_{max}}{y_{F.S}}$
+2. **回差（滞后）**Hysteresis:
+   - 反应传感器在正（输入量增加）反（输入量减小）行程过程中输入——输出曲线的**不重合程度**的指标
+   - 通常使用最大差程表示:$e_H=\frac{\Delta H_{max}}{y_{F.S.}}$
+3. 重复性Repeatability: 
+   - 衡量传感器在同一工作条件下，输入量按同一方向作全量程连续多次变动时，所得的特性曲线间一致程度的指标
+   - 重复性误差反映的是校准数据的离散程度，属于随机误差。
+   - $e_R=\pm\frac{a \sigma_{max}}{y_{F.S.}}$
+4. 灵敏度$K=\frac{\Delta y}{\Delta x}$
+5. 分辨力Resolution
+6. 阈值Threhold
+7. 稳定性stability
+8. 漂移Drifting
+   1. 零点偏移
+   2. 灵敏度漂移
+   3. 零点漂移或者灵敏度漂移又分别都可以分为
+      1. 时间漂移（时漂）
+      2. 温度漂移（温漂）
+9.  静态误差$e_S$（精度）Accuracy
 
-- 结构、材料与参数的合理选择
-- **差动技术**
-  - 设一传感器，其输出为：y1=a0+a1x+a2x^2+a3x^3+……用另一相同传感器，但使其输入量符号相反：y2=a0-a1x+a2x^2-a3x^3+……，使两者相减，即△y=y1-y2=2(a1x+a3x^3+……)
-  - **作用**：消除零位输出和偶次非线性项，得到了对称于原点的相当宽的近似线性范围，减小非线性，而且使灵敏度提高了一倍，抵消了共模误差。
-- 平均技术
-- 稳定性处理
-- 屏蔽、隔离与干扰抑制
-- 零示法、微差法与闭环技术
-- 补偿、校正与“有源”化
-- 集成化、智能化与信息融合
+##### 不同的拟合直线的方法
 
-### 1.4 合理选择传感器的基本原则和方法
+1. 理论直线法
+2. 端点直线法
+3. [最佳直线](https://wenku.baidu.com/view/f6c7918f0029bd64783e2c46.html)法：保证传感器校准曲线对它的正、负偏差相等并且最小
+4. 最小二乘法 
 
-### 1.5 传感器的标定与校准
-
-1. 静态标定：用于检测测试传感器（或传感器系统）的静态性能
-2. 动态标定
-
-#### 最小二乘法
+###### 最小二乘法
 
 $$
 k=\frac
@@ -118,20 +174,98 @@ $$
 
 最小二乘法的拟合精度很高，但是校准曲线相对拟合直线的最大偏差绝对值并不一定最小，最大正、负偏差的绝对值也不一定相等。
 
+#### 动态特性
+
+- 动态灵敏度
+- 频率响应特性
+  - bode 图 Nyquist图
+  - 固有频率等
+- 阶跃响应特性
+  1. 时间常数$\tau$
+  2. 上升时间$t_r$
+  3. 响应时间$T_s$
+  4. 超调量$a_1$
+  5. 衰减率$\psi$
+  6. 稳态误差$e_{ss}$
+ 
+#### 互换性
+
+### 1.3 改善传感器性能的技术途径
+
+- 结构、材料与参数的合理选择
+- **差动技术**
+  - 设一传感器，其输出为：y1=a0+a1x+a2x^2+a3x^3+……用另一相同传感器，但使其输入量符号相反：y2=a0-a1x+a2x^2-a3x^3+……，使两者相减，即△y=y1-y2=2(a1x+a3x^3+……)
+  - **作用**：
+    1. 消除零位输出和偶次非线性项，得到了对称于原点的相当宽的近似线性范围，**减小非线性**
+    2. **使灵敏度提高了一倍**，抵消了共模误差。
+    3. 补偿了温度误差
+- 平均技术
+- 稳定性处理
+- 屏蔽、隔离与干扰抑制
+- 零示法、微差法与闭环技术
+- 补偿、校正与“有源”化
+- 集成化、智能化与信息融合
+
+### 1.4 合理选择传感器的基本原则和方法
+
+### 1.5 传感器的标定与校准
+
+1. 静态标定：主要用于检测、测试传感器（或传感器系统）的静态性能指标，如静态灵敏度、非线性、回差、重复性
+   1. 经验标定系统的关键在于被测非电量的标准发生器及标准测试系统
+2. 动态标定：主要用于检验、测试传感器（或传感器系统）的动态特性，如动态灵敏度、频率响应和固有频率
+   1. 绝对标定法
+      - 精度较高，但所需设备复杂，标定不方便
+      - 常用于高精度传感器和标准传感器标定
+   2. 比较法（背靠背法）
+
+<details> 
+<summary>为什么要进行标定与校准
+</summary>
+- 新研制或生产的传感器需要对其技术性能进行全面的鉴定<br>
+- 经过一段时间储存或使用的传感器也需对其性能进行复测
+</details>
+
+<details>
+<summary>标定和校准的概念
+</summary>
+- 通常，在明确输入——输出变换对应关系的前提下，利用某种标准量或者标准器具对传感器的量值进行标度称之为**标定**<br>
+- 将传感器在使用中或储存后进行性能的复测称之为**校准**<br>
+- 两者本质相同
+</details>
+
+<details>
+<summary>标定的基本方法</summary>
+利用标准装备产生已知的非电量作为输入量，输入待标定的传感器，然后将传感器的输出量与输入的标准量作比较，获得一系列校准数据或曲线。
+有时输入的标准量是利用一标准传感器检测而得，这时的标定是待标定传感器与标准传感器之间的比较。
+</details>
+---
 
 ## 2电阻式传感器
 
-- 应变电阻效应$\frac{dR}{R}=(1+2\mu)\epsilon+\frac{d\rho}{\rho}$、$\frac{\Delta R}{R}=K_0\epsilon$
-  - 金属丝材料的应变电阻效应以**结构尺寸**变化为主$K_m=1+2\mu+C(1-2\mu)$
-  - 半导体材料的应变电阻效应主要基于**压阻效应**$K_s=(1+2\mu)+\pi E$
+### 应变电阻效应
+
+$$
+\frac{dR}{R}=(1+2\mu)\epsilon+\frac{d\rho}{\rho}
+\\
+\frac{\Delta R}{R}=K_0\epsilon
+$$
+- 金属丝材料的应变电阻效应以**结构尺寸**变化为主
+  - $\frac{\mathrm{d}\rho}{\rho}=C\frac{\mathrm{d}V}{V}$
+  - $K_m=1+2\mu+C(1-2\mu)$
+- 半导体材料的应变电阻效应主要基于**压阻效应**
+  - $\frac{\mathrm{d}\rho}{\rho}=\sigma =\pi E\epsilon$
+  - $K_s=(1+2\mu)+\pi E$
   - $K_s \approx 100K_m$
-- 电阻应变计：丝式，箔式，半导体
+
+### 电阻应变计
+
+- 分类：丝式，箔式，半导体
 - 电阻应变计组成：敏感栅，基底，引线，盖层，粘结剂
 - 电阻应变计的静态特性：
-  - 灵敏系数（K）
-  - 横向效应和横向效应系数(H): 
-    - 应变计这种既敏感纵向应变，同时又受横向应变影响而使灵敏系数及相对电阻比都减小的现象，称为横向效应
-    - 克服： 采用短接式或者直角式横栅（箔式）
+  - 灵敏系数$K=\frac{\Delta R}{R}/\epsilon_x$
+  - **横向效应**和横向效应系数(H): 
+    - 应变计既敏感纵向应变，同时又受横向应变影响而使*灵敏系数*及*相对电阻比*都*减小*的现象，称为横向效应
+    - 克服： 采用短接式或者直角式横栅（箔式应变计据此设计）
   - 机械滞后（$Z_j$)
   - 蠕变$\theta$和零漂$P_0$:
     - 粘贴在试件上的应变计，在恒温恒载条件下，指示应变量随时间单向变化的特性
@@ -141,28 +275,49 @@ $$
   - 对正弦应变波的响应
   - 对阶跃应变波的响应 
   - 疲劳寿命N:粘贴在试件上的应变计，在**恒幅交变应力**作用下，连续工作直至疲劳损坏时的循环次数
-- 温度效应$\frac{\Delta R}{R}=\alpha_t\Delta t +K(\beta_s-\beta_t)\Delta t$：单纯由温度变化引起应变计电阻变化的现象。
-  - 前半部分为热阻效应造成
-  - 后半部分为敏感栅与试件热膨胀失配所引起
-  - 热输出：$\epsilon_t =\frac{\frac{\Delta R}{R}}{K}$
-  - 热输出补偿方法：温度自补偿法(单丝，双丝）、桥路补偿法（双丝半桥式，补偿块式）
-- 测量电桥：应变电桥
-   - 按电源分：直流电桥，交流电桥
-   - 按工作方式分：平衡桥式电路（零位测量法），不平衡桥式电路（偏差测量法）
-   - 按桥臂关系分：
-     - 对输出端对称电桥（Z1=Z2，Z3=Z4）
-     - 对电源端对称电桥（Z1=Z4，Z2=Z3）
-     - 半等臂（Z1=Z2，Z3=Z4）和全等臂电桥（Z1=Z2=Z3=Z4）
 
+减小非线性误差：差动电桥补偿法，恒流源补偿法
 
-1.  全等臂差动电桥：
+#### 温度效应
+
+温度效应：单纯由温度变化引起应变计电阻变化的现象。
+
+$\frac{\Delta R}{R}=\alpha_t\Delta t +K(\beta_s-\beta_t)\Delta t$
+
+- 前半部分为热阻效应造成
+- 后半部分为敏感栅与试件热膨胀失配所引起
+- 热输出：$\epsilon_t =\frac{\frac{\Delta R}{R}}{K}$
+- 热输出补偿方法：
+  - 温度自补偿法(单丝，双丝）
+  -  桥路补偿法（双丝半桥式，补偿块式）
+
+#### 测量电桥：应变电桥
+
+ - 按电源分：直流电桥，交流电桥
+ - 按工作方式分：平衡桥式电路（零位测量法），不平衡桥式电路（偏差测量法）
+ - 按桥臂关系分：
+   - 对输出端对称电桥（Z1=Z2，Z3=Z4）
+   - 对电源端对称电桥（Z1=Z4，Z2=Z3）
+   - 半等臂（Z1=Z2，Z3=Z4）和全等臂电桥（Z1=Z2=Z3=Z4）
+- 全等臂差动电桥：
     1.  相对臂应变片感受应变大小相同，方向相同
     2.  相邻臂应变片感受应变大小相同，方向相反
     3.  四臂差动工作时，不仅消除了非线性误差，而且输出比单臂工作提高了4倍
-2.  减小非线性误差：差动电桥补偿法，恒流源补偿法
-3.  测力传感器类型：柱（筒）式，柱环式，悬梁式，轮辐式
-4.  压阻效应：半导体单晶硅、锗等材料在外力作用下电阻率将发生变化的现象。
 
+#### 电阻应变计式传感器
+
+- 测力传感器
+  - 柱（筒）式，柱环式，悬梁式，轮辐式
+- 压力传感器
+- 位移传感器
+
+### 压阻式传感器
+
+<details>
+<summary>压阻式传感器</summary>
+压阻效应：半导体单晶硅、锗等材料在外力作用下电阻率将发生变化的现象。
+</details>
+ 
 ## 3变磁阻式传感器Variable Reluctive Transducer
 
 他们主要包括
