--- a/大三上/传感器技术/传感器提纲.md
+++ b/大三上/传感器技术/传感器提纲.md
@@ -1,53 +1,6 @@
 # 传感器技术
 
-- [传感器技术](#传感器技术)
-  - [题型](#题型)
-  - [绪论](#绪论)
-    - [基本概念](#基本概念)
-      - [物理基本定律和法则](#物理基本定律和法则)
-    - [传感器的组成分类](#传感器的组成分类)
-    - [对传感器的要求](#对传感器的要求)
-      - [传感器的选用原则](#传感器的选用原则)
-    - [地位作用](#地位作用)
-    - [发展趋势](#发展趋势)
-  - [1传感器技术基础](#1传感器技术基础)
-    - [1.1数学模型](#11数学模型)
-    - [1.2传感器的特性与指标](#12传感器的特性与指标)
-      - [静态特性](#静态特性)
-        - [不同的拟合直线的方法](#不同的拟合直线的方法)
-          - [最小二乘法](#最小二乘法)
-      - [动态特性](#动态特性)
-      - [互换性](#互换性)
-    - [1.3 改善传感器性能的技术途径](#13-改善传感器性能的技术途径)
-    - [1.4 合理选择传感器的基本原则和方法](#14-合理选择传感器的基本原则和方法)
-    - [1.5 传感器的标定与校准](#15-传感器的标定与校准)
-  - [</details>](#details)
-  - [2电阻式传感器](#2电阻式传感器)
-    - [应变电阻效应](#应变电阻效应)
-    - [电阻应变计](#电阻应变计)
-      - [温度效应](#温度效应)
-      - [测量电桥：应变电桥](#测量电桥应变电桥)
-      - [电阻应变计式传感器](#电阻应变计式传感器)
-    - [压阻式传感器](#压阻式传感器)
-  - [3变磁阻式传感器Variable Reluctive Transducer](#3变磁阻式传感器variable-reluctive-transducer)
-    - [自感式传感器](#自感式传感器)
-    - [互感式传感器（差动变压器）](#互感式传感器差动变压器)
-    - [电涡流式传感器](#电涡流式传感器)
-  - [4电容式传感器Capacitance Transducer](#4电容式传感器capacitance-transducer)
-  - [5磁电式传感器Magnetoelectric Transducer](#5磁电式传感器magnetoelectric-transducer)
-    - [5.5霍尔传感器（Hall Sensor磁敏传感器）](#55霍尔传感器hall-sensor磁敏传感器)
-  - [6压电式传感器Piezoelectic Sensor](#6压电式传感器piezoelectic-sensor)
-    - [压电效应](#压电效应)
-    - [等效电路及测量电路](#等效电路及测量电路)
-  - [7热电式传感器Thermoelectric Sensor](#7热电式传感器thermoelectric-sensor)
-    - [热电效应](#热电效应)
-      - [热电效应的工作定律：](#热电效应的工作定律)
-      - [热电偶传感器](#热电偶传感器)
-  - [8光电式传感器Photoelectric Sensor](#8光电式传感器photoelectric-sensor)
-    - [应用](#应用)
-  - [10数字式传感器](#10数字式传感器)
-  - [13传感检测技术](#13传感检测技术)
-  - [14传感器新技术](#14传感器新技术)
+[TOC]
 
 ## 题型
 
@@ -102,6 +55,7 @@
 
 #### 传感器的选用原则
 <!-- ppt -->
+
 1. 与测量条件有关的因素
 1. 与传感器有关的技术指标
 1. 与使用环境条件有关的因素
@@ -130,27 +84,27 @@
 
 #### 静态特性
 
-1. **线性度**Linearity：
-   - 线性度又称非线性，是表征传感器输出——输入校准曲线与所选定的拟合直线（作为工作直线）之间的**吻合（或偏离）程度**的指标
+1. **线性度**Linearity又称非线性：
+   - 表征传感器输出——输入校准曲线与所选定的拟合直线（作为工作直线）之间的**吻合（或偏离）程度**的指标
    - 通常用相对误差表示$e_L=\pm \frac{\Delta L_{max}}{y_{F.S}}$
 2. **回差（滞后）**Hysteresis:
    - 反应传感器在正（输入量增加）反（输入量减小）行程过程中输入——输出曲线的**不重合程度**的指标
    - 通常使用最大差程表示:$e_H=\frac{\Delta H_{max}}{y_{F.S.}}$
 3. 重复性Repeatability: 
-   - 衡量传感器在同一工作条件下，输入量按同一方向作全量程连续多次变动时，所得的特性曲线间一致程度的指标
-   - 重复性误差反映的是校准数据的离散程度，属于随机误差。
+   - 衡量传感器在同一工作条件下，输入量按*同一方向*作*全量程*连续*多次*变动时，所得的特性曲线间**一致程度**的指标
+   - 重复性误差反映的是校准数据的离散程度，属于*随机误差*。
    - $e_R=\pm\frac{a \sigma_{max}}{y_{F.S.}}$
-4. 灵敏度$K=\frac{\Delta y}{\Delta x}$
-5. 分辨力Resolution
-6. 阈值Threhold
-7. 稳定性stability
+4. 灵敏度Sensitivity:传感器**输出量增量与被测输入量增量**之比$K=\frac{\Delta y}{\Delta x}$
+5. 分辨力Resolution:在规定测量范围内能测出的**输入量的最小值**。
+6. 阈值Threshold:能使传感器输出端产生可测变化量的最小被测输入量值，即零位附近的分辨力
+7. 稳定性stability,长期稳定性：用输出值与起始标定之间的差异来表示，也常用有效期来表示
 8. 漂移Drifting
    1. 零点偏移
    2. 灵敏度漂移
    3. 零点漂移或者灵敏度漂移又分别都可以分为
       1. 时间漂移（时漂）
       2. 温度漂移（温漂）
-9.  静态误差$e_S$（精度）Accuracy
+9.  静态误差$e_S$（精度）Accuracy：综合性能指标
 
 ##### 不同的拟合直线的方法
 
@@ -169,7 +123,6 @@ k=\frac
 b=\frac
 {\sum{x_i^2}{\sum{y_i}-\sum{x_i}\sum{x_iy_i}}}
 {n\sum{x_i^2}-(\sum{x_i})^2}
-
 $$
 
 最小二乘法的拟合精度很高，但是校准曲线相对拟合直线的最大偏差绝对值并不一定最小，最大正、负偏差的绝对值也不一定相等。
@@ -187,7 +140,7 @@ $$
   4. 超调量$a_1$
   5. 衰减率$\psi$
   6. 稳态误差$e_{ss}$
- 
+
 #### 互换性
 
 ### 1.3 改善传感器性能的技术途径
@@ -236,13 +189,20 @@ $$
 <details>
 <summary>标定的基本方法</summary>
 利用标准装备产生已知的非电量作为输入量，输入待标定的传感器，然后将传感器的输出量与输入的标准量作比较，获得一系列校准数据或曲线。
-有时输入的标准量是利用一标准传感器检测而得，这时的标定是待标定传感器与标准传感器之间的比较。
+有时输入的标准量是利用一标准传感器检测而得，这时的标定是待标定传感器与标准传感器之间的比较。<br>
+标定系统组成：
+<br>（1）标准发生器
+<br>（2）标准测试系统
+<br>（3）待标定传感器所配接的信号调节器和显示、记录器等
 </details>
 ---
 
 ## 2电阻式传感器
 
 ### 应变电阻效应
+
+导体或半导体材料在外界力的作用下产生机械变形时，
+其电阻值发生变化， 这种现象称为“应变效应”。
 
 $$
 \frac{dR}{R}=(1+2\mu)\epsilon+\frac{d\rho}{\rho}
@@ -289,7 +249,7 @@ $\frac{\Delta R}{R}=\alpha_t\Delta t +K(\beta_s-\beta_t)\Delta t$
 - 热输出：$\epsilon_t =\frac{\frac{\Delta R}{R}}{K}$
 - 热输出补偿方法：
   - 温度自补偿法(单丝，双丝）
-  -  桥路补偿法（双丝半桥式，补偿块式）
+  -  桥路补偿法（双丝半桥式，补偿块式，差动电桥补偿法）
 
 #### 测量电桥：应变电桥
 
@@ -317,7 +277,7 @@ $\frac{\Delta R}{R}=\alpha_t\Delta t +K(\beta_s-\beta_t)\Delta t$
 <summary>压阻式传感器</summary>
 压阻效应：半导体单晶硅、锗等材料在外力作用下电阻率将发生变化的现象。
 </details>
- 
+
 ## 3变磁阻式传感器Variable Reluctive Transducer
 
 他们主要包括
@@ -338,26 +298,36 @@ $\frac{\Delta R}{R}=\alpha_t\Delta t +K(\beta_s-\beta_t)\Delta t$
       2. 变面积式
       3. 螺管式
    2. 按组成方式，有单一式和差动式两种。
-3. 自感式传感器**测量电路**：
-   1. 电桥电路：输出交流信号
-   2. 谐振电路：灵敏度高，非线性严重
-   3. 恒流源电路：抵消掉非线性部分
-   4. 调频电路：抗干扰能力强
-   5. **相敏检波电路**（衔铁下移，输出信号总为负；“上正下负”）
-4. 零位误差
-   - 定义：差动自感式传感器当衔铁位于中间位置时，电桥输出理论上应为零，但实际上总存在零位不平衡电压输出，造成零位误差。
-   - 组成：
-     - 基波谐波：传感器两线圈的电气参数和几何尺寸不对称，以及构成电桥另外两臂的电气参数不一致。
-     - 高次谐波：磁性材料磁化曲线的非线性。
-   - 减小零位误差的措施
-     1. 选择性能稳定均匀的磁性材料（磁滞小，保证均匀性，加工精度）
-     2. 减少激励电流的谐波成分与利用外壳来进行电磁屏蔽 
-     3. **补偿电路**：
-        - *串联电阻*消除*基波*零位电压；
-        - *并联电阻*消除*高次谐波*零位电压；
-        - *加并联电容*消除*基波正交分量或高次谐波分量*。
-      1. 采用外接测量电路来减小零位电压。如前述的相敏检波电路，它能有效地消除基波正交分量与偶次谐波分量，减小奇次谐波分量，使传感器零位电压减至极小。
-      2. 采用磁路调节机构(如可调端盖)保证磁路的对称性，来减小零位电压。
+
+#### 自感式传感器的测量电路：
+
+1. 电桥电路：输出交流信号
+2. 谐振电路：灵敏度高，非线性严重
+3. 恒流源电路：抵消掉非线性部分，当ｌa>ｌ′后，灵敏度提高，线性改善，进入工作区域。
+4. 调频电路：抗干扰能力强
+5. **相敏检波电路**（衔铁下移，输出信号总为负；“上正下负”）
+
+#### 自感传感器的误差
+
+##### 输出特性非线性
+
+<!-- 差动、限制测量范围、梯形线圈 -->
+
+##### 零位误差
+
+- 定义：差动自感式传感器当衔铁位于中间位置时，电桥输出理论上应为零，但实际上总存在零位不平衡电压输出，造成零位误差。
+- 组成：
+  - 基波谐波：传感器两线圈的电气参数和几何尺寸不对称，以及构成电桥另外两臂的电气参数不一致。
+  - 高次谐波：磁性材料磁化曲线的非线性。
+- 减小零位误差的措施
+  1. 选择性能稳定均匀的**磁性材料**（磁滞小，保证均匀性，加工精度）
+  2. 减少**激励电流**的谐波成分与利用外壳来进行电磁屏蔽 
+  3. **补偿电路**：
+     - *串联电阻*消除*基波*零位电压；
+     - *并联电阻*消除*高次谐波*零位电压；
+     - *加并联电容*消除*基波正交分量或高次谐波分量*。
+  4. 采用**外接测量电路**来减小零位电压。如前述的相敏检波电路，它能有效地消除基波正交分量与偶次谐波分量，减小奇次谐波分量，使传感器零位电压减至极小。
+  5. 采用**磁路调节机构**(如可调端盖)保证磁路的对称性，来减小零位电压。
 
 ### 互感式传感器（差动变压器）
 
@@ -372,19 +342,26 @@ $\frac{\Delta R}{R}=\alpha_t\Delta t +K(\beta_s-\beta_t)\Delta t$
    1. *串联电阻*用以减小零位电压的基波分量；
    2. *并联电阻、电容*用以减小谐波分量；
    3. *加反馈支路*用以减小基波和谐波分量。
-4. 测量电路：变磁阻式传感器输出为**调幅波**，为了辨识衔铁移动的方向需要解调。采用解调电路还可以消减零位误差，减小测量误差。12为常见的解调电路
-   1. 差动相敏检波电路
-   2. 差动整流电路
-   3. 直流差动变压器电路
-5. 应用
+
+#### 互感式传感器的测量电路：
+
+变磁阻式传感器输出为**调幅波**，为了辨识衔铁移动的方向需要解调。采用解调电路还可以消减零位误差，减小测量误差。12为常见的解调电路
+
+1. 差动相敏检波电路
+2. 差动整流电路
+3. 直流差动变压器电路
+
+差动式电感传感器测量电路为什么经常采用相敏检波（或差动整流）电路？试分析其原理。
+
+- 因为测量电路不具有判别信号相位和频率的能力，抗干扰能力弱。而相敏检波电路可以起到判别作用。
+- 原理：使高频调幅信号与高频载波信号相乘，经滤波后输出低频解调信号。
+
+#### 应用
+
    1. 位移与尺寸的测量
    2. 压力测量
    3. 力和力矩
    4. 振动测量
-- 差动式电感传感器测量电路为什么经常采用相敏检波（或差动整流）电路？试分析其原理。
-   - 因为测量电路不具有判别信号相位和频率的能力，抗干扰能力弱。而相敏检波电路可以起到判别作用。
-   - 原理：使高频调幅信号与高频载波信号相乘，经滤波后输出低频解调信号。
-
 
 ### 电涡流式传感器
 
@@ -405,7 +382,15 @@ $\frac{\Delta R}{R}=\alpha_t\Delta t +K(\beta_s-\beta_t)\Delta t$
 
 ## 4电容式传感器Capacitance Transducer
 
-- 特点：结构简单、高分辨力、可非接触测量、并能在高温、辐射和强烈震动等恶劣条件下工作（分辨力极高；动极质量小，可无接触测量，自身功耗、发热和迟滞极小，可获得高的静态精度和好的动态性能；结构简单；过载能力强。）
+<!-- - 特点：结构简单、高分辨力、可非接触测量、并能在高温、辐射和强烈震动等恶劣条件下工作（分辨力极高；动极质量小，可无接触测量，自身功耗、发热和迟滞极小，可获得高的静态精度和好的动态性能；结构简单；过载能力强。） -->
+- 优点
+  - 温度稳定性好
+  - 结构简单
+  - 动态响应好
+  - 可以非接触测量，具有平均效应
+- 缺点
+  - 输出阻抗高，负载能力差
+  - 寄生电容影响大
 - 电容式传感器分类：
   - 变极距型：变极距型差动式结构（灵敏度提高一倍，非线性误差大为减小）
   - 变面积型
@@ -419,19 +404,28 @@ $\frac{\Delta R}{R}=\alpha_t\Delta t +K(\beta_s-\beta_t)\Delta t$
       2. 整体屏蔽法
       3. 采用组合式与集成技术
    4. 温度影响
-3. 电容式传感器测量电路：
-   1. 耦合式电感电桥
-      1. 紧耦合式电感电桥
-      2. **变压器电桥**：在负载阻抗极大时，其输出特性呈线性
-   2. 双T二极管交流电桥
-   3. 脉冲调宽电路
-   4. 运算放大器电路
-4. 应用
+#### 电容式传感器测量电路：
+
+1. 耦合式电感电桥
+   1. 紧耦合式电感电桥
+   2. **变压器电桥**：在负载阻抗极大时，其输出特性呈线性
+2. 双T二极管交流电桥
+3. 脉冲调宽电路
+4. 运算放大器电路
+
+#### 应用
    1. 位移
    2. 加速度
    3. 力和压力
    4. 物位
-
+<!-- 分辨力极高，能测量低达10-7的电容值0.01μm 的绝对
+变化量和高达(ΔC/C)＝100%～200%的相对变化量，因此尤
+适合微信息检测；
+(2)动极质量小，可无接触测量；自身的功耗、发热和迟滞极
+小，可获得高的静态精度和好的动态特性；
+(3)结构简单，不含有机材料或磁性材料，对环境(除高湿外)
+的适应性较强；
+(4)过载能力强 -->
 ## 5磁电式传感器Magnetoelectric Transducer
 
 利用**电磁感应原理**，将输入运动速度或磁量的变化变换成感应电势输出的传感器。有较大输出功率，故配用电路较简单；零位及性能稳定，工作频带一般在10~1000Hz
@@ -517,7 +511,7 @@ x 1                 length
 
 - 当需要输出电压时，可把他等效成一个与**电容串联**的电压源
 - 当需要输出电荷时，可把它等效成一个与**电容并联**的电荷源
-- 测量电路：
+- 测量电路：压电传感器的测量电路——前置放大器。必须具备两种功能：**信号放大**和**阻抗匹配**
   - 电压放大器
     - 电压灵敏度：$K_{um}^*=\frac{d_{33}}{C_a+C_c+C_i}$ （P146，图P145，d33:压电常数），只与回路等效电容C有关，而与被测量的变化频率无关，*受电缆分布电容$C_c$影响*
   - 电荷放大器
