--- a/大三下/毛泽东思想和中国特色社会主义理论体系概论/课堂提问记录.md
+++ b/大三下/毛泽东思想和中国特色社会主义理论体系概论/课堂提问记录.md
@@ -99,3 +99,34 @@
 讨论题8. 结合课件2.2和教材简要回答：为什么地主阶级是中国革命的对象？
 
 > 封建地主阶级是帝国主义统治中国和封建军阀实行专制统治的社会基础。地主阶级是用封建制度剥削和压迫农民的阶级，是在政治上、经济上、文化上阻碍中国社会前进而没有丝毫进步作用的阶级，是中国经济现代化和政治民主化的主要障碍。
+
+## 第四次课
+
+讨论题1. 结合课件2.3和教材回答：新民主主义革命的动力包括哪些？
+
+> 无产阶级，农民阶级，城市小资产阶级，民族资产阶级
+
+讨论题2. 用教材的哪一句话即可阐明：为什么说无产阶级是中国革命最基本的动力？
+
+> 中国无产阶级是新的社会生产力的代表，是近代中国最进步的阶级，是中国革命的领导力量。
+
+结合课件2.3简要回答：富农与地主的主要区别是什么？
+
+> 一是富农的土地没有地主多；二是地主不劳动，富农则参加劳动。
+
+讨论题5. 认真听课件2.4，然后结合课件2.4简要回答：新民主主义革命仍然是资产阶级民主革命，不是社会主义无产阶级革命，那么为什么要由无产阶级而不是资产阶级来领导？
+
+> 革命的性质是由革命的对象和任务决定的，不是由革命的领导阶级决定的。由于中国的民主资产阶级不能领导资产阶级民主革命取得胜利，领导中国革命的重任历史地落到了中国无产阶级及政党的肩上。
+
+讨论题6. 新民主主义革命与旧民主主义革命相比，有哪四个新特点？（用四个词，不超过30字）
+
+- 结合教材第二章第二节
+- 甚至可以归纳为12字
+
+> 新时代、新阶级、新思想、新前途
+> 内在逻辑是：进入新时代，有了新阶级，拥抱新思想，实现新前途
+
+讨论题7. 新民主主义革命道路的根本在于处理好哪三个方面的关系？新民主主义革命基本经验的三大法宝是什么？
+
+> - 中国革命走农村包围城市、武装夺取政权的道路，**根本在于处理好土地革命、武装斗争、农村革命根据地建设三者之间的关系**。
+> - 统一战线、武装斗争、党的建设比作党在中国革命中战胜敌人的三个主要的法宝
