毛概第五次课

--- a/大三下/毛泽东思想和中国特色社会主义理论体系概论/课堂提问记录.md
+++ b/大三下/毛泽东思想和中国特色社会主义理论体系概论/课堂提问记录.md
@@ -2,10 +2,10 @@
 
 ## 第二次课
 
-<details> 
+<details>
 <summary>流传版本</summary>
 <pre><code>
-1、19世纪末20世纪初，世界进入帝国主义与无产阶级革命新时代，是毛泽东思想形成的时代背景。 
+1、19世纪末20世纪初，世界进入帝国主义与无产阶级革命新时代，是毛泽东思想形成的时代背景。
 2、中国共产党领导人民进行的革命和建设的成功实践是毛泽东思想形成的实践基础
 农村包围城市，武装夺取政权
 新民主主义革命理论
@@ -130,3 +130,39 @@
 
 > - 中国革命走农村包围城市、武装夺取政权的道路，**根本在于处理好土地革命、武装斗争、农村革命根据地建设三者之间的关系**。
 > - 统一战线、武装斗争、党的建设比作党在中国革命中战胜敌人的三个主要的法宝
+
+## 第五次课
+
+根据课件3.1回答:社会主义改造理论主要探讨哪四个问题？
+
+> - 新民主主义社会的性质和特点，
+> - 过渡时期总路线及其理论依据，
+> - 社会主义改造道路和历史经验，
+> - 社会主义基本制度的确立及其理论意义
+
+根据课件3.2和教材简要回答：新民主主义社会存在哪五种经济成分？主要是哪三种？
+
+> 社会主义性质的国营经济、半社会主义性质的合作社经济、农民和手工业者的个体经济、私人资本主义经济和国家资本主义经济
+> 主要的经济成分是三种：社会主义经济、个体经济和资本主义经济
+
+讨论题3. 根据课件3.2和教材回答：新民主主义社会的阶级构成主要包括哪几种阶级力量？
+
+> 中国社会的阶级构成主要是工人阶级、农民阶级和其他小资产阶级、民族资产阶级等基本的阶级力量
+
+讨论题4.结合课件3.3和教材简要回答：1949-1952年，党从哪三个方面为全面向社会主义过渡作准备？
+
+> 没收官僚资本，建立社会主义性质的国营经济；
+> 在完成土地改革之后的农村，及时开展互助合作运动；
+> 在调整工商业过程中，采取对私营工商业加工订货、经销代销等方式，广泛发展初级形式的国家资本主义等，为全面向社会主义过渡奠定了基础。
+
+讨论题5. 实现社会主义工业化的必要性是什么？
+
+> 实现社会主义工业化，是国家独立和富强的必然要求和必要条件
+
+“一化”与”三改”之间的关系应该如何理解？
+
+> 一化”是“主体”，“三改”是“两翼”，两者相辅相成、相互促进。
+
+讨论题：根据教材第50页，谈谈毛泽东是如何回答进行社会主义改造的原因的？
+
+> 是因为只有完成了由生产资料的私人所有制到社会主义所有制的过渡，才利于社会生产力的迅速向前发展，才利于在技术上起一个革命，把在我国绝大部分社会经济中使用简单的落后的工具农具去工作的情况，改变为使用各类机器直至最先进的机器去工作的情况，借以达到大规模地出产各种工业和农业产品，满足人民日益增长着的需要，提高人民的生活水平，确有把握地增强国防力量，反对帝国主义的侵略，以及最后地巩固人民政权，防止反革命复辟这些目的。
