毛概 第六次课 使用prettier格式化

--- a/大三下/毛泽东思想和中国特色社会主义理论体系概论/课堂提问记录.md
+++ b/大三下/毛泽东思想和中国特色社会主义理论体系概论/课堂提问记录.md
@@ -29,133 +29,133 @@
 </code></pre>
 </details>
 
-讨论题1. 结合课件1.1和教材回答：什么思想的提出，标志着毛泽东思想初步形成？
+讨论题 1. 结合课件 1.1 和教材回答：什么思想的提出，标志着毛泽东思想初步形成？
 
 > 农村包围城市，武装夺取政权
 
-讨论题2. 结合课件1.2和电子版教材回答：什么理论的系统阐述标志着毛泽东思想趋于成熟？
+讨论题 2. 结合课件 1.2 和电子版教材回答：什么理论的系统阐述标志着毛泽东思想趋于成熟？
 
 > 新民主主义革命理论
 
-讨论题3: 结合课件1.2和教材回答：下列著作发表于毛泽东思想趋于成熟阶段的是（ ）A. 反对本本主义 B. 新民主主义论 C. 论联合政府 D. 论人民民主专政
+讨论题 3: 结合课件 1.2 和教材回答：下列著作发表于毛泽东思想趋于成熟阶段的是（ ）A. 反对本本主义 B. 新民主主义论 C. 论联合政府 D. 论人民民主专政
 
 > BC
 
-讨论题4. 结合课件1.3和教材回答：毛泽东思想紧紧围绕的两大主题是什么？
+讨论题 4. 结合课件 1.3 和教材回答：毛泽东思想紧紧围绕的两大主题是什么？
 
 > 革命与建设
 
-讨论题5. 结合课件1.3和教材回答：哪三大作风是中国共产党区别于其他任何政党的显著标志
+讨论题 5. 结合课件 1.3 和教材回答：哪三大作风是中国共产党区别于其他任何政党的显著标志
 
 > 理论和实践相结合的作风，和人民群众紧密地联系在一起的作风，以及自我批评的作风，是中国共产党区别于其他任何政党的显著标志
 
-讨论题6.结合课件1.4和教材回答：毛泽东思想的活的灵魂包括哪三个方面的立场、观点和方法？
+讨论题 6.结合课件 1.4 和教材回答：毛泽东思想的活的灵魂包括哪三个方面的立场、观点和方法？
 
 > 实事求是、群众路线、独立自主
 
-讨论题7. 结合课件1.4和电子版教材回答：我国疫情防控和脱贫攻坚之所以取得伟大胜利，最重要的是因为在基本思想方法上坚持什么？
+讨论题 7. 结合课件 1.4 和电子版教材回答：我国疫情防控和脱贫攻坚之所以取得伟大胜利，最重要的是因为在基本思想方法上坚持什么？
 
 > 实事求是
 
-讨论题8. 结合课件1.4和电子版教材回答：我们党区别于其他一切政党的根本标志是什么？
+讨论题 8. 结合课件 1.4 和电子版教材回答：我们党区别于其他一切政党的根本标志是什么？
 
 > 全心全意为人民服务
 
 ## 第三次课
 
-讨论题1. 结合课件2.1和教材回答：我们应该如何从总体结构上把握第二章内容？
+讨论题 1. 结合课件 2.1 和教材回答：我们应该如何从总体结构上把握第二章内容？
 
 > 第一节，新民主主义革命理论形成的依据；
 > 第二节，新民主主义革命的总路线和基本纲领；
 > 第三节，新民主主义革命的道路和基本经验。
 
-讨论题2. 结合课件2.1简要回答：中国近代社会发生了哪两个根本性变化？
+讨论题 2. 结合课件 2.1 简要回答：中国近代社会发生了哪两个根本性变化？
 
 > 独立的中国变为半殖民地的中国;
 > 封建的中国变为半封建的中国
 
-讨论题3. 结合课件2.1和教材回答：近代中国社会性质决定了近代中国社会主要矛盾是什么？其中最主要的矛盾是什么？
+讨论题 3. 结合课件 2.1 和教材回答：近代中国社会性质决定了近代中国社会主要矛盾是什么？其中最主要的矛盾是什么？
 
 > 帝国主义和中华民族的矛盾，封建主义和人民大众的矛盾，
 > 最主要矛盾是帝国主义与中华民族的矛盾
 
-讨论题4. 结合课件2.2简要回答：为什么说义和团运动提出的“扶清灭洋”口号注定了最终必然失败？
+讨论题 4. 结合课件 2.2 简要回答：为什么说义和团运动提出的“扶清灭洋”口号注定了最终必然失败？
 
 > 因为既没有认清外国侵略者的实质，也没有认清本国封建统治者同外国侵略者的关系
 
-讨论题5. 辛亥革命虽然推翻了清政府，但最终还是以失败而告终，它和义和团运动一样都没有解决好什么首要问题？
+讨论题 5. 辛亥革命虽然推翻了清政府，但最终还是以失败而告终，它和义和团运动一样都没有解决好什么首要问题？
 
 > 没有弄清楚中国革命的对象是帝国主义、封建主义和官僚资本主义。
 
-讨论题6. 中国革命的首要对象是什么？为什么？
+讨论题 6. 中国革命的首要对象是什么？为什么？
 
 > 帝国主义，它是中国社会进步和发展的最大障碍，是近代中国贫穷落后和一切灾难祸害的总根源
 
-结合课件2.2，简要回答：如何从目的和结果两个方面反驳西方殖民主义者的“侵华有功”论？
+结合课件 2.2，简要回答：如何从目的和结果两个方面反驳西方殖民主义者的“侵华有功”论？
 
 > 从目的看，帝国主义侵华是要变中国，为其商品倾销市场和原料产地，而不是为了中国走上现代化的道路，更不是为了给中国带来民主，自由和博爱。
 > 从结果看，帝国主义通过野蛮的侵略战争，从中国获得了最大经济利益，给中华民族带来了深重的灾难，对中国人民犯下了滔天的罪行
 
-讨论题8. 结合课件2.2和教材简要回答：为什么地主阶级是中国革命的对象？
+讨论题 8. 结合课件 2.2 和教材简要回答：为什么地主阶级是中国革命的对象？
 
 > 封建地主阶级是帝国主义统治中国和封建军阀实行专制统治的社会基础。地主阶级是用封建制度剥削和压迫农民的阶级，是在政治上、经济上、文化上阻碍中国社会前进而没有丝毫进步作用的阶级，是中国经济现代化和政治民主化的主要障碍。
 
 ## 第四次课
 
-讨论题1. 结合课件2.3和教材回答：新民主主义革命的动力包括哪些？
+讨论题 1. 结合课件 2.3 和教材回答：新民主主义革命的动力包括哪些？
 
 > 无产阶级，农民阶级，城市小资产阶级，民族资产阶级
 
-讨论题2. 用教材的哪一句话即可阐明：为什么说无产阶级是中国革命最基本的动力？
+讨论题 2. 用教材的哪一句话即可阐明：为什么说无产阶级是中国革命最基本的动力？
 
 > 中国无产阶级是新的社会生产力的代表，是近代中国最进步的阶级，是中国革命的领导力量。
 
-结合课件2.3简要回答：富农与地主的主要区别是什么？
+结合课件 2.3 简要回答：富农与地主的主要区别是什么？
 
 > 一是富农的土地没有地主多；二是地主不劳动，富农则参加劳动。
 
-讨论题5. 认真听课件2.4，然后结合课件2.4简要回答：新民主主义革命仍然是资产阶级民主革命，不是社会主义无产阶级革命，那么为什么要由无产阶级而不是资产阶级来领导？
+讨论题 5. 认真听课件 2.4，然后结合课件 2.4 简要回答：新民主主义革命仍然是资产阶级民主革命，不是社会主义无产阶级革命，那么为什么要由无产阶级而不是资产阶级来领导？
 
 > 革命的性质是由革命的对象和任务决定的，不是由革命的领导阶级决定的。由于中国的民主资产阶级不能领导资产阶级民主革命取得胜利，领导中国革命的重任历史地落到了中国无产阶级及政党的肩上。
 
-讨论题6. 新民主主义革命与旧民主主义革命相比，有哪四个新特点？（用四个词，不超过30字）
+讨论题 6. 新民主主义革命与旧民主主义革命相比，有哪四个新特点？（用四个词，不超过 30 字）
 
 - 结合教材第二章第二节
-- 甚至可以归纳为12字
+- 甚至可以归纳为 12 字
 
 > 新时代、新阶级、新思想、新前途
 > 内在逻辑是：进入新时代，有了新阶级，拥抱新思想，实现新前途
 
-讨论题7. 新民主主义革命道路的根本在于处理好哪三个方面的关系？新民主主义革命基本经验的三大法宝是什么？
+讨论题 7. 新民主主义革命道路的根本在于处理好哪三个方面的关系？新民主主义革命基本经验的三大法宝是什么？
 
 > - 中国革命走农村包围城市、武装夺取政权的道路，**根本在于处理好土地革命、武装斗争、农村革命根据地建设三者之间的关系**。
 > - 统一战线、武装斗争、党的建设比作党在中国革命中战胜敌人的三个主要的法宝
 
 ## 第五次课
 
-根据课件3.1回答:社会主义改造理论主要探讨哪四个问题？
+根据课件 3.1 回答:社会主义改造理论主要探讨哪四个问题？
 
 > - 新民主主义社会的性质和特点，
 > - 过渡时期总路线及其理论依据，
 > - 社会主义改造道路和历史经验，
 > - 社会主义基本制度的确立及其理论意义
 
-根据课件3.2和教材简要回答：新民主主义社会存在哪五种经济成分？主要是哪三种？
+根据课件 3.2 和教材简要回答：新民主主义社会存在哪五种经济成分？主要是哪三种？
 
 > 社会主义性质的国营经济、半社会主义性质的合作社经济、农民和手工业者的个体经济、私人资本主义经济和国家资本主义经济
 > 主要的经济成分是三种：社会主义经济、个体经济和资本主义经济
 
-讨论题3. 根据课件3.2和教材回答：新民主主义社会的阶级构成主要包括哪几种阶级力量？
+讨论题 3. 根据课件 3.2 和教材回答：新民主主义社会的阶级构成主要包括哪几种阶级力量？
 
 > 中国社会的阶级构成主要是工人阶级、农民阶级和其他小资产阶级、民族资产阶级等基本的阶级力量
 
-讨论题4.结合课件3.3和教材简要回答：1949-1952年，党从哪三个方面为全面向社会主义过渡作准备？
+讨论题 4.结合课件 3.3 和教材简要回答：1949-1952 年，党从哪三个方面为全面向社会主义过渡作准备？
 
 > 没收官僚资本，建立社会主义性质的国营经济；
 > 在完成土地改革之后的农村，及时开展互助合作运动；
 > 在调整工商业过程中，采取对私营工商业加工订货、经销代销等方式，广泛发展初级形式的国家资本主义等，为全面向社会主义过渡奠定了基础。
 
-讨论题5. 实现社会主义工业化的必要性是什么？
+讨论题 5. 实现社会主义工业化的必要性是什么？
 
 > 实现社会主义工业化，是国家独立和富强的必然要求和必要条件
 
@@ -163,6 +163,61 @@
 
 > 一化”是“主体”，“三改”是“两翼”，两者相辅相成、相互促进。
 
-讨论题：根据教材第50页，谈谈毛泽东是如何回答进行社会主义改造的原因的？
+讨论题：根据教材第 50 页，谈谈毛泽东是如何回答进行社会主义改造的原因的？
 
 > 是因为只有完成了由生产资料的私人所有制到社会主义所有制的过渡，才利于社会生产力的迅速向前发展，才利于在技术上起一个革命，把在我国绝大部分社会经济中使用简单的落后的工具农具去工作的情况，改变为使用各类机器直至最先进的机器去工作的情况，借以达到大规模地出产各种工业和农业产品，满足人民日益增长着的需要，提高人民的生活水平，确有把握地增强国防力量，反对帝国主义的侵略，以及最后地巩固人民政权，防止反革命复辟这些目的。
+
+## 第六次课
+
+讨论题 1. 结合课件 3.4 和教材回答：对农业的社会主义改造的主要内容包括哪几个方面？
+
+> 1.积极引导农民组织起来走互助合作道路。 2.遵循自愿互利、典型示范和国家帮助的原则，以互助合作的优越性吸引农民走互助合作道路。 3.正确分析农村的阶级和阶层状况，制定正确的阶级政策。 4.坚持积极领导、稳定前进的方针，采取循序渐进的步骤。
+
+讨论题 2. 农业社会主义改造大体上经历了哪几个发展阶段？
+
+> - 第一阶段，发展互助组，试办初级社；
+> - 第二阶段，建立初级农业生产合作社
+> - 第三阶段，发展高级社
+
+讨论题 3. 互助组、初级社、高级社的性质分别是什么？
+
+> 社会主义萌芽性质，半社会主义性质，社会主义性质
+
+讨论题 4. 对手工业的社会主义改造的方针是什么？具体经历了哪三个步骤？
+
+> 党和政府采取了积极领导、稳步前进的方针
+> 具体来说，手工业的社会主义改造经历了由小到大、由低级到高级的三个步骤
+> ? 第一步是办手工业供销小组。
+> 第二步是办手工业供销合作社。
+> 第三步是建立手工业生产合作社。
+
+讨论题 5. 对资本主义工商业进行赎买的含义是什么？具体方式是什么？
+
+> 所谓赎买，就是国家有偿地将私营企业改变为国营企业，将资本主义私有制改变为社会主义公有制。
+> 赎买的具体方式不是由国家支付一笔巨额补偿资金，而是让资本家在一定年限内从企业经营所得中获取一部分利润
+
+讨论题 6. 初级形式的国家资本主义包括哪几种形式？
+
+> 国家对私营工商业实行委托加工、计划订货、统购包销、经销代销等
+> 公私合营是高级形式的国家资本主义
+
+讨论题 7. “四马分肥”具体按哪几个方面进行分配？
+
+> 国家所得税，企业公积金，工人福利费，资方红利
+
+讨论题 8. 在进行社会主义改造的历史进程中，我们党积累了哪些重要历史经验？
+
+> 第一，坚持社会主义工业化建设与社会主义改造同时并举。
+> 第二，采取积极引导、逐步过渡的方式.
+> 第三，用和平方法进行改造.
+
+讨论题 9. 结合课件 3.5 和教材回答：社会主义基本制度的确立，在经济领域的最主要标志是什么？
+改造完成，经济领域发生了什么根本变化？
+
+> 社会主义经济成分已占绝对优势，社会主义公有制已成为我国社会的经济基础
+
+讨论题 10. 用教材的一小段话简要回答：中国确立社会主义基本制度具有什么重大意义？
+
+> 社会主义基本制度的确立是中国历史上最深刻最伟大的社会变革，
+> 为当代中国一切发展进步奠定了制度基础，
+> 也为中国特色社会主义制度的创新和发展提供了重要前提
