--- a/大三下/毛泽东思想和中国特色社会主义理论体系概论/课堂提问记录.md
+++ b/大三下/毛泽东思想和中国特色社会主义理论体系概论/课堂提问记录.md
@@ -221,3 +221,61 @@
 > 社会主义基本制度的确立是中国历史上最深刻最伟大的社会变革，
 > 为当代中国一切发展进步奠定了制度基础，
 > 也为中国特色社会主义制度的创新和发展提供了重要前提
+
+## 第七次课
+
+讨论题1. 根据课件4.1回答: 在时间上，我国社会主义建设道路的初步探索指的是哪个时期？认识这一历史阶段，要做到哪三个结合？
+
+> 时间：1956-1978年党的十一届三中全会前：
+> 社会主义建设道路的初步探索阶段
+>
+> 1. 结合特定的历史条件去认识、理解中国共产党初步探索社会主义建设道路取得的理论成果
+> 2. 结合中国特色社会主义道路的形成，认识。理解中国共产党对社会主义建设道路的初步探索和改革开放的关系
+> 3. 结合科学社会主义的发展，认识中国共产党初步探索社会主义建设道路的理论意义和实践意义
+
+讨论题2. 哪篇文献标志着党探索中国社会主义建设道路的良好开端？它确定的基本方针是什么？
+
+> 《论十大关系》标志着党探索中国社会主义建设道路的良好开端。《论十大关系》确定了一个基本方针，就是“努力把党内党外、国内国外的一切积极的因素，直接的、间接的积极因素全部调动起来”，为社会主义建设服务
+
+讨论题3. 毛泽东系统梳理了中国建设社会主义必须处理好的十组关系，其中讨论经济问题的是哪几组？
+
+> 经济方面：
+> 1.重工业和轻工业、农业的关系
+> 2.沿海工业和内地工业的关系
+> 3.经济建设和国防建设的关系
+> 4.国家、生产单位和生产个人的关系
+> 5.中央和地方的关系
+
+讨论题4. “十大关系”中讨论政治和文化问题的是哪几组？
+
+> 政治文化方面：
+>
+> 1. 汉族和少数民族的关系
+> 2. 党和非党的关系
+> 3. 革命和反革命的关系
+> 4. 是非关系
+> 5. 中国和外国的关系
+
+讨论题5. 结合课件4.3和教材回答： 毛泽东认为，社会主义社会的基本矛盾仍然是是什么？性质上有什么变化？为什么？
+
+> 在社会主义社会中，基本的矛盾仍然是生产关系和生产力之间的矛盾，上层建筑和经济基础之间的矛盾。
+> 以往社会的基本矛盾，生产关系与生产力之间存在着一定程度的对抗和冲突，
+> 而社会主义社会的基本矛盾是在生产关系和生产力基本适应、上层建筑和经济基础基本适应条件下的矛盾，是在人民根本利益一致基础上的矛盾。
+> 因此，它不是对抗性的矛盾，而是非对抗性的矛盾。
+
+讨论题6. 如何理解生产关系与生产力之间“又相适应又相矛盾”？哪一面是基本方面？
+
+> 一方面社会主义生产关系已经建立起来，它是和生产力的发展相适应的；
+> 另一方面它还很不完善，这些不完善的方面和生产力的发展又是相矛盾的。
+> 其中，相适应的一面是基本方面，相矛盾的一面是非基本方面
+
+讨论题7. 人民内部矛盾主要包括哪些？
+
+> 人民内部矛盾，包括工人阶级内部的矛盾，农民阶级内部的矛盾，知识分子内部的矛盾，
+> 工农两个阶级之间的矛盾，工人、农民同知识分子之间的矛盾，工人阶级和其他劳动人民同民族资产阶级的矛盾，
+> 也包括政府和人民群众之间的矛盾，民主同集中的矛盾，领导同被领导之间的矛盾，国家机关某些工作人员的官僚主义作风同群众之间的矛盾，
+
+讨论题8. 解决人民内部矛盾应该采用什么方法？具体指哪三种方法？
+
+> 民主
+> 具体指：讨论的方法，批评的方法，说服教育的方法
