--- a/大三下/工程与社会/2第二讲.md
+++ b/大三下/工程与社会/2第二讲.md
@@ -81,3 +81,94 @@ C. Wright Mills(US) 定义的这个“距离”
 
 **联系**：不同的研究领域中确实存在着社会学的研究对象，即别的具体社会科学都涉及但不做专门研究的东西。
 社会学的研究对象正是针对不同领域中存在的规律性而进行的理论概括
+
+### 二、社会学的研究领域
+
+- 理论社会学
+  - 历史：社会理论发展史、社会思想发展史、社会史
+  - 理论：社会结构和过程、社会运行和发展以及人类行为等概括性解释
+  - 方法：方法论&具体方法：体现为分析社会现象的视角及具体路径等
+- 应用社会学
+  - 由众多的针对具体社会现象进行研究的分支社会学构成。
+  - 同时，应用社会学的分支学科还在不断增加，持续发展
+
+## VII 社会学知识
+
+知识是人脑对客观世界的反映，器内容是客观的
+
+但是，人脑在对世界反映时并非原原本本地把外界的东西移入，知识<missed>
+
+### 知识的层次
+
+1. 生活经验:最低层次的知识，是对于某一具体事物或具体事物的性质、特点及其与他者、他物间关系的认识;
+2. 科学知识:源于对具体事物的认识，以观察为基础，对系列事物进行普遍性概括，继而反映某类事物的情况;
+3. 哲学知识:最为抽象的知识，以理性反省为基础,是关于对普遍规律的认识。
+
+![知识的真伪](../../pics/2021-0315-160457.png)
+
+## VIII 社会学发展脉络
+
+### 一、社会学的基础研究发展史
+
+![社会学的发展脉络](../../pics/2021-0315-163348.png)
+
+### 二、代表人物-A.Comte
+
+创造了社会学这个词，社会学称为“实证哲学”。
+认为社会学的目标就是去发现社会的“不可更改的规律”。
+他相信,科学的方法可以用来探讨社会学的两个方面。
+
+- 社会动力学：研究世界上各种社会模式如何产生及如何改变。
+- 社会静力学：研究社会和部分（团体和制度)的建构方式、部分的功能,以及部分之间的关系;
+
+### 二、代表人物 - H.spencer
+
+社会秩序的不稳定，是一个庞大演化过程中的一部分。
+其认为社会是在不断进化的，环境也在不断地变化，任何社会若要生存下去，则组成社会的成份必须不断地去适应环境。
+
+“社会”则类似于达尔文描述的进化中的生物有机体。
+其最先提出了关于社会的“适者生存”概念，认为经过自然选择之后，只有最适合社会安排的，最后才能留下来。
+
+### 三、代表任务 - K.Marx
+
+社会进程是不断冲突与变迁的过程，社会发展主要是由经济力量决定的;
+人类历史是经济上对立的阶级之间不可避免的相互冲突的过程;
+而掌握生产资料的资本家与没有生产资料的无产阶级的冲突，
+导致社会主义社会将取代资本主义社会。
+
+社会学理论界公认，
+马克思关于社会阶级、经济因素在社会生活中的重要作用、社会中社会生活的异化等观点，是对于社会科学的重要贡献。
+马克思被西方社会学界视作社会冲突理论的开创者。
+
+![马克思](../../pics/2021-0315-164049.png)
+
+### 四、代表任务 - E.Durkheim
+
+涂尔干相信某种社会的基本力量将个人团结在社会之内:机械团结 VS有机团结;
+
+认为社会事实才是社会学研究的主题，因为它们才是控制个人行为的外来力量;社会事实可能产生在人们的社会互动里，也可能记录在社会风俗习惯及法律里，社会事实也是一种集体意识;
+
+提出“失范”的概念,在失范的状态下，个人的行为不再受公共规范的控制;其相信社会是因其成员享有共同的信仰和价值观而联为一体的;其对自杀现象的研究,成为社会学进行实证研究的典范。
+
+![E.Durkheim`](../../pics/2021-0315-164306.png)
+
+### 五、代表人物 - M.Weber
+
+提出社会科学家在研究现象和得出结论·，只有将他们自己的观点放在一边，才能获得发现理解现象的客观方法，这是一种价值无涉的社会学
+
+建立了社会学研究的模型,并提出社会学必须包括社会行动的研究，即研究人们相互之间行为取向的方式;研究人际互动不仅依赖于客观的定量方法,也要设身处地理解行动者的主观意愿。
+
+其应用了“理想类型”的概念——表示一个特别的社会模式或过程，人们可以用这种模型来检视和比较真实世界中的社会安排;其也是科层制和资本主义研究的挖掘者。
+
+### 六、代表任务 - 其他
+
+20 世纪始，社会学的研究中心逐步转向美国，
+日益浮现出了一大批富有创造力的学派&学者；
+
+![芝加哥学派](../../pics/2021-0315-165603.png)
+
+![社会唯实论，社会唯名论，实惠行动的结构](../../pics/2021-0315-165715.png)
+
+![Homans的行为交换论](../../pics/2021-0315-170356.png)
+
+## 三、社会学在中国的发展
