第八次课，线上课程结束 下周线下

--- a/大三下/毛泽东思想和中国特色社会主义理论体系概论/课堂提问记录.md
+++ b/大三下/毛泽东思想和中国特色社会主义理论体系概论/课堂提问记录.md
@@ -279,3 +279,43 @@
 
 > 民主
 > 具体指：讨论的方法，批评的方法，说服教育的方法
+
+## 第八次课
+
+讨论题1. 结合课件4.4和教材回答：由于受苏联工业化模式的影响，我国工业化建设一度存在什么样的缺失？
+
+> 我国一度过多强调重工业和基础设施的建设，影响了农业和轻工业的发展，造成了一定程度的比例失调
+
+讨论题2. 毛泽东提出的中国工业化道路问题主要指的是什么？
+
+> 中国工业化道路的问题，主要是指重工业、轻工业和农业的发展关系问题，要走一条有别于苏联的中国工业化道路。
+
+讨论题3. 为什么要以工业为主导、以重工业为重点？
+
+> 以工业为主导，把重工业作为我国经济建设的重点，以逐步建立独立的比较完整的基础工业体系和国防工业体系，这是维护国家独立、统一和安全，实现国家富强所必需的，是毫无疑义、必须肯定的。
+
+讨论题4. 以重工业为重点的同时，为什么必须充分注意发展农业和轻工业？
+
+> 更多地发展农业、轻工业，既可以更好地供给人民生活的需要，又可以增加资金积累和扩大市场。这不仅会使重工业发展得多些和快些，而且由于保障了人民生活的需要，会使它发展的基础更加巩固。
+
+讨论题5. 毛泽东提出的发展国民经济的总方针是什么？
+
+> 以农业为基础，以工业为主导，以农轻重为序发展国民经济
+
+讨论题6. 毛泽东提出的工业化发展思路主要包括哪四个方面？
+
+> 即重工业和轻工业同时并举，中央工业和地方工业同时并举，沿海工业和内地工业同时并举，大型企业和中小型企业同时并举
+
+讨论题7. 结合课件4.5和教材回答：我国社会主义建设道路的初步探索为什么会遭遇严重曲折？
+
+> 由于我们对马克思主义关于社会主义的一些基本原理的理解不够深入，对中国的基本国情缺乏深刻认识，没有能够完全搞清楚什么是社会主义、怎样建设社会主义的问题，也没有完全摆脱苏联模式的影响，采取了一些脱离实际、超越发展阶段的政策和措施，导致我国社会主义建设道路的探索遭遇严重曲折
+
+讨论题8. 根据课件4.5回答: 实践证明，在探索符合中国特点的社会主义建设道路中，应该如何“吃透”两头？
+
+> 一方面，科学理解马克思主义的基本原理，运用马克思主义的立场，观点和方法，分析和解决实践中遇到的种种问题。
+> 另外要准确把握中国基本国情，充分认识在中国建设社会主义的长期性和复杂性，逐步掌握社会主义建设规律，开辟适合中国特点的社会主义建设道路。
+
+讨论题9. 社会主义要体现出相对资本主义的优势并最终战胜资本主义，必须怎样对待资本主义？
+
+> 社会主义要体现出相对资本主义的优势并最终战胜资本主义，必须大胆借鉴和吸收包括资本主义文明在内的一切人类文明成果，
+> 创造出高于资本主义国家的社会生产力和物质文化生活水平。
