更新概率统计

--- a/大二下/概率论与数理统计/概率论与数理统计/数理统计.md
+++ b/大二下/概率论与数理统计/概率论与数理统计/数理统计.md
@@ -12,8 +12,6 @@
     - 区间估计
   - 假设检验
 
-[toc]
-
 ## 9 抽样分布
 
 ### 9-1 总体与样本
@@ -204,6 +202,42 @@ $$
 
 ## 10 点估计
 
+### 矩估计
+
+$$
+E(X^l)=A_l=\frac{1}{n}\sum\limits_{i=1}^{n}X_i^l
+$$
+
+
+
+### 最大似然估计
+
+$$
+L(\theta)=\prod\limits_{i=1}^{n}p(x_i;\theta)
+$$
+
+### 估计量选取的标准
+
+1. 无偏性：估计量的期望等于未知参数的真值
+2. 有效性：方差小
+3. 相合性：当样本数趋于无穷时，估计量趋于真值
+
 ## 11 区间估计
 
+确定一个区间，使得有比较高的可靠程度相信他包含真值
+
+![](附.assets/正态总体的均值和方差的置信区间.png)
+
 ## 12 假设检验
+
+两类错误
+
+- 第一类错误：以真为假，弃真
+- 第二类错误：以假为真，取伪
+
+显著性假设检验考虑的是第一类错误
+
+### 单正态总体的假设检验
+
+![单正态总体均值的检验](附.assets/单正态总体均值的检验.png)
+![单正态总体方差的检验](附.assets/单正态总体方差的检验.png)
