--- a/大二下/概率论与数理统计/概率论与数理统计/概率论.md
+++ b/大二下/概率论与数理统计/概率论与数理统计/概率论.md
@@ -1,6 +1,4 @@
-# 概率论与数理统计
-
-这里主要是概率论相关的知识，公式由$\KaTeX$写成
+# 概率论
 
 - 常见分布
   - [常见一维离散分布](#3-2-常见的一维离散型分布)
@@ -8,10 +6,11 @@
     - [均匀分布](#均匀分布uniform-distribution)
     - [指数分布](#4-4-指数分布)
     - [正态分布](#4-5-正态分布)
+  - [分布及其期望](#常见分布的期望和方差)
 
 ## 前言
 
-（不确定性、不确定性数量化）概率论与数理统计就是不确定性的数量化研究，主要内容为随机现象的统计规律性。主要应用有：天气预报，保险收益，物价问题（抽样的概念），大数据（计算机，概率论，统计学）
+概率论与数理统计就是不确定性的数量化研究，主要内容为随机现象的统计规律性。主要应用有：天气预报，保险收益，物价问题（抽样的概念），大数据（计算机，概率论，统计学）
 
 ### 历史与发展
 
@@ -32,10 +31,6 @@
 **苏俄数学家**1906年俄国数学家马尔科夫(Markov,1856-1922)年提出马尔科夫链
 1934年前苏联科学家辛钦(Khinchin,1894-1959)提出了“平稳过程”
 柯尔莫哥洛夫(Kolmogorov,1903-1987) 前苏联 《概率论基础》（1933） “概率论的公理化方法
-
-### 授课目标
-
-通过本课程的学习，使学生系统地学习随机变量和初等数理统计的基本理论知识，掌握必要的随机变量分析方法和常规的数理统计方法。在逐步培养学生的抽象思维和逻辑推理能力的同时，加强学生应用随机思想分析问题的能力。
 
 ## 一、古典概率
 
@@ -167,8 +162,6 @@ $$
 $$
 P:A\to P(A),\forall A\subset \Omega ,\lim_{n\to \infty}f_n(A)=P(A)
 $$
-
-以上内容在有道云笔记上写成![示例图片](https://note.youdao.com/favicon.ico)
 
 ### 1-3 概率的性质
 
@@ -342,9 +335,6 @@ $$
 2. 列表法：概率分布表
 3. 图示法：概率分布图
 
-- ![列表法](附.assets/列表法.png)
-- ![图示法](附.assets/图示法表示分布律.png)
-
 ### 3-2 常见的一维离散型分布
 
 只有两个可能结果的试验称为**贝努利试验**（成功失败试验、二次试验）
@@ -419,13 +409,12 @@ $$
 
 ### 4-1分布函数
 
-**定义**[^410]：设X为一随机变量，对任意实数x，事件{$X\leq x$}的概率P{$X\leq x$}称为随机变量X的**分布函数**.记为F(x),即$F(x)=P\{X\leq x\}$.
+**定义**[^410]：设X为一随机变量，对任意实数x，事件{$X\leq x$}的概率P{$X\leq x$}称为随机变量X的**分布函数**.记为F(x),即
 $$
 F(x)=P\{X\leq x\},-\infty<x<+\infty\\
 F:R\to [0,1]\\
 
 \forall 实数x_1<x_2,P\{x_1<X\leq x_2\}=P\{X\leq x_2\}-P\{X\leq x_1\}=F(x_2)-F(x_1)
-\tag{4.1}
 $$
 分布函数的**性质**：（**充分必要性质**[^411]）
 
@@ -437,17 +426,6 @@ $$
 3. 右连续性：对任意实数$x_0$,$F(x_0+0)=\lim\limits_{x\to x_0^+}F(x)=F(x_0)$
 
 > 由右连续性可知，在使用公式$4.1$时不需要纠结取等的问题。注意离散型随机变量没有左连续，而连续型有
-
-$$
-\begin{aligned}
-  \forall x_0\in R,\\
-  P\{X=x_0\}&=\lim_{\epsilon\to0^+}P\{x_0-\epsilon<X\leq x_0\}\\
-  &=\lim_{\epsilon\to0^+}[F(x_0)-F(x_0-\epsilon)]\\
-  &=F(x_0)-\lim_{\epsilon\to0+}F(x_0-\epsilon)\\
-  &=F(x_0)-F(x_0-0)\\
-&=F(x_0+0)-F(x_0-0)
-\end{aligned}
-$$
 
 [^410]:还有一种定义形式，小于等于变成了仅小于
 [^411]: 三个性质是分布函数的充分必要性质.即具有上述三个性质的实函数，一定可以作为某个随机变量的分布函数.
@@ -562,15 +540,15 @@ $$
 
 #### 正态分布的一些性质
 
-1. (?线性) 如果 $X \sim N\left(\mu, \sigma^{2}\right)$ 且a与b为实数，那么 $a X+b \sim N\left(a \mu+b,(a \sigma)^{2}\right)$
-2. (?加减) 如果 $X \sim N\left(\mu_{X}, \sigma_{X}^{2}\right)$ 与 $Y \sim N\left(\mu_{Y}, \sigma_{Y}^{2}\right)$ 是统计独立的正态随机变量，那么：
+1. (线性) 如果 $X \sim N\left(\mu, \sigma^{2}\right)$ 且a与b为实数，那么 $a X+b \sim N\left(a \mu+b,(a \sigma)^{2}\right)$
+2. (加减) 如果 $X \sim N\left(\mu_{X}, \sigma_{X}^{2}\right)$ 与 $Y \sim N\left(\mu_{Y}, \sigma_{Y}^{2}\right)$ 是统计独立的正态随机变量，那么：
    - 它们的和地满足正态分布 $U=X+Y \sim N\left(\mu_{X}+\mu_{Y}, \sigma_{X}^{2}+\sigma_{Y}^{2}\right)$
    - 它们的差也满足正态分布 $V=X-Y \sim N\left(\mu_{X}-\mu_{Y}, \sigma_{X}^{2}+\sigma_{Y}^{2}\right)$
    - U与V两者是相互独立的。（要求X与Y的方差相等）。
-3. (?乘除) 如果 $X \sim N\left(0, \sigma_{X}^{2}\right)$ 和 $Y \sim N\left(0, \sigma_{Y}^{2}\right)$ 是独立常态随机变量，那
+3. (乘除) 如果 $X \sim N\left(0, \sigma_{X}^{2}\right)$ 和 $Y \sim N\left(0, \sigma_{Y}^{2}\right)$ 是独立常态随机变量，那
    - 它们的积XY服从概率密度函数为p的分布$p(z)=\frac{1}{\pi \sigma_{X} \sigma_{Y}} K_{0}\left(\frac{|z|}{\sigma_{X} \sigma_{Y}}\right),$ 其中 $K_{0}$ 是修正贝塞尔函数 $(\text { modified Bessel function })$
    - 它们的比符合柯西分布，满足 $X / Y \sim \operatorname{Cauchy}\left(0, \sigma_{X} / \sigma_{Y}\right)$
-4. 如果 $X_{1}, \cdots, X_{n}$ 为独立标准常态随机变雷, 那么 $X_{1}^{2}+\cdots+X_{n}^{2}$ 服从自由度为n的卡方分布。
+4. 如果 $X_{1}, \cdots, X_{n}$ 为独立标准常态随机变量, 那么 $X_{1}^{2}+\cdots+X_{n}^{2}$ 服从自由度为n的卡方分布。
 
 #### 标准正态分布
 
@@ -832,23 +810,6 @@ $$
 
 #### 和的分布
 
-设$(X,Y)$为连续型随机变量，其密度函数为$f(x,y)$,$Z=X+Y$.
-$$
-\begin{aligned}
-F_Z(z)&=P\{Z\leq z\}=P\{X+Y\leq z\}=\iint\limits_{x+y\leq z}f(x,y)\mathrm{d}x\mathrm{d}y\\
-&=\int\limits_{-\infty}^{+\infty}dx\int_{-\infty}^{z-x}f(x,y)\mathrm{d}y\\
-&\xlongequal{u=x+y}\int_{-\infty}^{+\infty}\mathrm{d}x\int_{-\infty}^{z}f(x,u-x)\mathrm{d}u\\
-&\xlongequal{\text{交换次序}}\int_{-\infty}^z\mathrm{d}u\int_{-\infty}^{+\infty}f(x,u-x)\mathrm{d}x\\
-&\Rightarrow f_Z(z)=\frac{\mathrm{d}F_Z(z)}{\mathrm{d}z}=\int_{-\infty}^{+\infty}f(x,z-x)\mathrm{d}x
-\end{aligned}
-$$
-由对称性同理有
-$$
-f_Z(z)=\int_{-\infty}^{+\infty}f(z-y,y)\mathrm{d}y\\
-f_Z(z)=\int_{-\infty}^{+\infty}f(x,z-x)\mathrm{d}x
-$$
-这就是**和的密度函数公式**。
-
 若X与Y相互独立，则$Z=X+Y$的密度函数，满足如下的**卷积公式**
 
 $$
@@ -862,11 +823,15 @@ $$
 
 求解最大值分布（最小值分布）
 
-$M=max\{X_1,X_2,\dots,X_n\}$,$N=min\{X_1,X_2,\dots,X_n\}$.
+$$
+M=max\{X_1,X_2,\dots,X_n\}\\
+F_M(z)=F(z,\dots,z)\xlongequal{\text{独立}}F_{X_1}(z)F_{X_2}(z)\dots F_{X_n}(z)\xlongequal{\text{独立同分布}}[F(z)]^n
+$$
 
-$F_M(z)=F(z,\dots,z)\xlongequal{\text{独立}}F_{X_1}(z)F_{X_2}(z)\dots F_{X_n}(z)\xlongequal{\text{独立同分布}}[F(z)]^n$
-
-$F_N(z)=1-P\{X_1>z,\dots,X_n>z\}\xlongequal{\text{独立}}1-[1-F_{X_1}(z)]\cdots[1-F_{X_n}(z)]\xlongequal{\text{独立同分布}}1-[1-F(z)]^n$
+$$
+N=min\{X_1,X_2,\dots,X_n\}\\
+F_N(z)=1-P\{X_1>z,\dots,X_n>z\}\xlongequal{\text{独立}}1-[1-F_{X_1}(z)]\cdots[1-F_{X_n}(z)]\xlongequal{\text{独立同分布}}1-[1-F(z)]^n
+$$
 
 ##### 极值分布的通常应用
 
@@ -929,24 +894,6 @@ $$
    2. 数学期望是线性算子
 5. 若X与Y独立，则$E(XY)=E(X)E(Y)$.
    1. 若$X_1,X_2,\dots,X_n$相互独立，则$E(X_1X_2\cdots X_n)=E(X_1)E(X_2)\cdots E(X_n)$
-
-$$
-\begin{aligned}
-求Y&=
-\left|
-\begin{array}
-{cccc}\boldsymbol{X}_{\mathbf{1 1}} & \boldsymbol{X}_{\mathbf{1 2}} & \cdots & \boldsymbol{X}_{\mathbf{1 n}} \\ \boldsymbol{X}_{\mathbf{2 1}} & \boldsymbol{X}_{\mathbf{2 2}} & \cdots & \boldsymbol{X}_{\mathbf{2 n}} \\ \vdots & \vdots & & \vdots \\ \boldsymbol{X}_{\boldsymbol{n 1}} & \boldsymbol{X}_{\boldsymbol{n 2}} & \cdots & \boldsymbol{X}_{\boldsymbol{n n}}
-\end{array}
-\right|
-的数学期望，其中X_{ij}独立同分布
-\\
-\\
-\because Y&=\sum\limits_{p_1,p_2,\cdots,p_n}(-1)^{\tau(p_1,p_2,\cdots,p_n)}X_{1 p_1}X_{2 p_2}\dots X_{n p_n},\text{涛指逆序数}
-\\
-\therefore E(Y)&=\sum\limits_{p_1,p_2,\cdots,p_n}(-1)^{\tau(p_1,p_2,\cdots,p_n)}E(X_{1 p_1}X_{2 p_2}\dots X_{n p_n})\\
-&=\sum\limits_{p_1,p_2,\cdots,p_n}(-1)^{\tau(p_1,p_2,\cdots,p_n)}E(X_{1 p_1})E(X_{2 p_2})\dots E(X_{n p_n})\\
-\end{aligned}
-$$
 
 ### 方差
 
@@ -1024,7 +971,9 @@ $$
 
 **原点矩**：$A_k=E(X^k),k=1,2,\dots$——X的k阶原点矩；*特别地*，$E(X)=A_1$为1阶原点矩
 
-**中心矩**：$B_k=E\{[X-E(X)]^k\},k=1,2,\dots$——X的k阶中心矩；*特别地* $B_2=E\{[X-E(X)]^2\}=D(X)$为2阶中心矩
+**中心矩**：$B_k=E\{[X-E(X)]^k\},k=1,2,\dots$——X的k阶中心矩；
+
+*特别地* $B_2=E\{[X-E(X)]^2\}=D(X)$为2阶中心矩
 
 #### 二维随机变量的矩
 
@@ -1100,24 +1049,28 @@ $$
 ##### 定理一：契比雪夫大数定理(样本算术均值和真实期望的关系)
 
 设随机变量$X_1,X_2,\dots,X_n,\cdots$相互独立，且具有相同的数学期望和方差:$E(X_k)=\mu$，$D(X_k)=\sigma^2$,$k=1,2,\cdots$,作前n个随机变量的算术平均$\bar{X}=\frac1{n}\sum\limits_{k=1}^{n}X_k$,则对于任意正数$\varepsilon$有
+
 $$
 \lim_{n\to \infty}P\{|\bar{X}-\mu|<\varepsilon\}=\lim_{n\to\infty}P\left\{\left|\frac1n\sum_{k=1}^kX_k-\mu\right|<\varepsilon\right\}=1
 $$
+
 **说明**：当n很大时，随机变量$X_1,X_2,\dots,X_n$的算术平均$\frac1n\sum\limits_{k=1}^nX_k$接近于数学期望
+
 $$
 E(X_1)=E(X_2)=\cdots =E(X_k)=\mu
 $$
+
 (这个接近是概率意义下的接近）即在定理条件下, n个随机变量的算术平均, 当n无限增加时, 几乎变成一个常数。
 
 ###### 定理一的另一种叙述
 
-设随机变量 $ X_{1}, X_{2}, \cdots, X_{n}, \cdots$ 相互独立且具有相同的数学期望 和方差：E $\left(X_{k}\right)=\mu$$D\left(X_{k}\right)=\sigma^{2}(k=1,2, \cdots),$ 则序列 $X=\frac{1}{n} \sum\limits_{k=1}^{n} X_{k}$依概率收敘[^依概率收敛]于 $\mu,$ 即 $\boldsymbol{X} \overset P\longrightarrow \mu$
+设随机变量 $ X_{1}, X_{2}, \cdots, X_{n}, \cdots$ 相互独立且具有相同的数学期望 和方差：E $\left(X_{k}\right)=\mu$,$D\left(X_{k}\right)=\sigma^{2}(k=1,2, \cdots),$ 则序列 $X=\frac{1}{n} \sum\limits_{k=1}^{n} X_{k}$依概率收敘[^依概率收敛]于 $\mu,$ 即 $\boldsymbol{X} \overset P\longrightarrow \mu$
 
 [^依概率收敛]:设 $Y_{1}, Y_{2}, \cdots, Y_{n}$ 是一个随数,若对于任意正数 $\varepsilon$有 $\lim_{n \rightarrow \infty} P\left\{\left|Y_{n}-a\right|<\varepsilon\right\}=1$则称序列 $Y_{1}, Y_{2}, \cdots, Y_{n}$依概率收于 a,记为$Y_{n} \stackrel{P}{\longrightarrow} a$
 
 ##### 定理二：伯努利大数定律(概率与频率的关系）
 
-设 $n_{A}$ 是 $n$ 次独立重复试验中事件 $A$ 发生的次数, $p$ 是事件 $A$ 在每次试验中发生的概率, 则对于任意正数 $\varepsilon>0,$ 有
+设 $n_{A}$ 是 $n$ 次独立重复试验中事件 $A$ 发生的次数, $p$ 是事件 $A$ 在每次试验中发生的概率, 则对于任意正数 $\varepsilon>0$ 有
 
 $$
 \frac{n_{A}}{n} \stackrel{P}{\longrightarrow} p
@@ -1130,7 +1083,7 @@ $$
 
 ##### 定理三：辛钦大数定律（算术平均值和数学期望的关系）
 
-设随机变量 $X_{1}, X_{2}, \cdots, X_{n}, \cdots$ 相互独立,服从同一分布, 且具有数学期望 $E\left(X_{k}\right)=\mu$$(k=1,2, \cdots),$ 则
+设随机变量 $X_{1}, X_{2}, \cdots, X_{n}, \cdots$ 相互独立,服从同一分布, 且具有数学期望 $E\left(X_{k}\right)=\mu$,$(k=1,2, \cdots)$， 则
 $$
 \frac{1}{n} \sum_{k=1}^{n} X_{k} \stackrel{P}{\longrightarrow} p
 $$
@@ -1186,7 +1139,8 @@ $$
 
 #### 定理三（德莫佛一拉普拉斯定理）
 
-设随机变量 $\eta_{n}(n=1,2, \cdots)$ 服从参数为 $n, p$$(0<p<1)$ 的二项分布,则 对于任意 $x,$ 恒有
+设随机变量 $\eta_{n}(n=1,2, \cdots)$ 服从参数为 $n, p$,$(0<p<1)$ 的二项分布,则 对于任意 $x,$ 恒有
+
 $$
 \frac{\eta_{n}-n p}{\sqrt{n p(1-p)}} \stackrel{d}{\longrightarrow} N(0,1)
 $$
@@ -1194,3 +1148,17 @@ $$
 ##### 定理三表明
 
 正态分布是二项分布的极限分布, 当n充分大时, 可以利用该定理来计算二项分布的概率.
+
+
+
+
+
+
+
+## END
+
+- 1.2及以上内容在有道云笔记上写成![有道云笔记](https://note.youdao.com/favicon.ico)
+- 其余使用typora
+- 公式由$\KaTeX$渲染
+- docsify对footnote不支持
+
